# store-management

./: .env  ai_agent.py  database.py  frontend.py  hello.py  main.py  models.py  notifications.py  pyproject.toml  store.db  test.py
templates/: index.cl  styles.css
